# vscode-wasm

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  sample.wai  tsconfig.json
configurations/: language-configuration-wai-wit.json  language-configuration-wat-wasm.json
snippets/: instructions.json  sections.json  types.json  wat.snippets.json
src/: contentProvider.ts  extension.ts  utils.ts  webassembly-content-provider.ts  webassembly-debug-content-provider.ts  webassembly-debug-session.ts  webassembly-quick-pick-item.ts
syntaxes/: README.md  wai.json  wat.json  webassembly.tmLanguage.json  wit.json
tests/: sgp4.wai  test.rs
wai-language-server/: Cargo.toml
wai-language-server/src/: main.rs
